Update dashboard UI and chart title
Refined dashboard styles for improved layout and appearance, including new background colors, table and form adjustments, and a welcome header. Changed chart title from 'My Finances' to 'Your Finances'. Commented out navigation switching logic in switchViews.js, possibly for future refactoring or debugging.

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,15 +12,17 @@
     ☰
     </div>
 
-
+   
     <!-- Sidebar / Dashboard Container -->
     <div class="dashboardContainer">
-      <a href=""><h1 id="dashLogo">MoneyMap</h1></a>
+
       <ul>
-        <li><a href="#" id="dashboardLink">Dashboard</a></li>
-        <li><a href="#" id="transactionsLink">Add Transactions</a></li>
         <li><a href="#" id="logOut">Log out</a></li>
       </ul>
+    </div>
+
+     <div class="welcome">
+      <h1>MoneyMap Dashboard</h1>
     </div>
 
     <!-- Dashboard Section -->
